Update the way filter works, WIP

--- a/client/src/main/webapp/css/style.css
+++ b/client/src/main/webapp/css/style.css
@@ -412,6 +412,10 @@ footer {
     background: #000;
 }
 
+.filtered {
+    border: 4px solid green;
+}
+
 /* Media Queries */
 @media (max-width: 1200px) {
 
